# solana-anonymous-voting

./: .gitignore  Anchor.toml  Cargo.toml  README.md  REUSE.toml  circomkit.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
LICENSES/: LicenseRef-GitHub-Logo-Policy.txt
circom/: EdDSAPoseidonVerifier.circom  MerkleTreeInclusionProof.circom  PoseidonHasher.circom  Relay.circom  Tally.circom  Vote.circom  circuits.json
circom/main/: Relay.circom  Tally.circom  Vote.circom
frontend/: index.html  package.json  vite.config.ts
frontend/public/zk/Tally/: Tally.wasm  groth16_pkey.zkey
frontend/public/zk/Vote/: Vote.wasm  groth16_pkey.zkey
frontend/src/: App.tsx  index.css
helpers/: compressSolana.ts  exportSolana.ts  key.ts  merkletree.ts  utils.ts
indexer/: Cargo.toml  config.yml
indexer/migrations/: 001_init.sql
indexer/src/: census_manager.rs  config.rs  db.rs  description_manager.rs  event_processor.rs  indexer_event_processor.rs  main.rs  parse_logs.rs  server.rs  solana_reader.rs  utils.rs
programs/anon-vote/: Cargo.toml
programs/anon-vote/src/: error.rs  events.rs  lib.rs  state.rs  utils.rs  vk.rs
programs/anon-vote/src/instructions/: close_tally.rs  create_poll.rs  create_tally.rs  finish_tally.rs  initialize.rs  mod.rs  tally_batch.rs  update_config.rs  vote.rs  withdraw_poll.rs
programs/zk-relayer/: Cargo.toml
programs/zk-relayer/src/: error.rs  lib.rs  state.rs  utils.rs  vk.rs
programs/zk-relayer/src/instructions/: create_relayer_state.rs  initialize.rs  mod.rs  relay.rs  update_config.rs
relayer/: Cargo.toml  build.rs  config.yml
relayer/src/: config.rs  main.rs  prover.rs  rocks.rs  server.rs  utils.rs
scripts/: exportVk.ts  genExample.ts  genKey.ts
scripts/anon-vote/: initialize.ts
scripts/zk-relayer/: fetchConfig.ts  initialize.ts  updateConfig.ts
smt-circom/: Cargo.toml
smt-circom/src/: lib.rs
smt-circom/src/store/: mem.rs  mod.rs  rocksdb.rs
tests/: contract.test.ts  helpers.ts
ts-sdk/: package.json  pnpm-lock.yaml
ts-sdk-relayer/: package.json  tsup.config.ts
ts-sdk-relayer/src/: accounts.ts  constants.ts  index.ts  instructions.ts  pdas.ts  program.ts  types.ts  utils.ts
ts-sdk/src/: accounts.ts  constants.ts  events.ts  index.ts  instructions.ts  pdas.ts  program.ts  types.ts  utils.ts
