[package]
name = "anon-vote-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = { version = "4", features = ["openssl"] }
anchor-lang = "0.31.1"
anon-vote = { path = "../programs/anon-vote", features = ["no-entrypoint"] }
base64 = "0.21"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
openssl = "0.10"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
solana-client = "2"
solana-sdk = "2.2"
solana-transaction-status = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.solana-tools]
git = "https://github.com/lincot/solana-tools"
branch = "new-dev"
