[package]
name = "zk-relayer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = { version = "4", features = ["openssl"] }
anchor-lang = "0.31.1"
anyhow = "1"
ark-serialize = "0.5"
circom-prover = { version = "0.1.4", default-features = false, features = ["witnesscalc", "rapidsnark"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dashmap = "5.5"
dotenvy = "0.15"
hex = "0.4"
openssl = "0.10"
rocksdb = "0.24"
ruint = "1.17.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15", features = ["hex"] }
smt-circom = { path = "../smt-circom", features = ["rocksdb"] }
solana-sdk = "2.2"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
witnesscalc-adapter = "0.1"
zk-relayer = { path = "../programs/zk-relayer", features = ["no-entrypoint"] }

[dependencies.solana-tools]
git = "https://github.com/lincot/solana-tools"
branch = "new-dev"

[dev-dependencies]
groth16-solana = "0.2"

[build-dependencies]
witnesscalc-adapter = "0.1"
